Revert "Fix alignment on mobile"
This reverts commit 6dbe0c18b7e58cbc6a42c83265345bb35e6dc3be.

--- a/client/my-sites/plans/jetpack-plans/product-store/style.scss
+++ b/client/my-sites/plans/jetpack-plans/product-store/style.scss
@@ -45,21 +45,10 @@
 	height: 120px;
 
 	margin-bottom: 1.25rem;
-    display: flex;
-    justify-content: center;
 
 	@include break-large {
 		height: 54px;
 
 		margin-bottom: 0;
 	}
-
-    .intro-pricing-banner, .intro-pricing-banner__sticky, .intro-pricing-banner__loading {
-        align-items: flex-start;
-
-        img {
-            min-width: 2em;
-            margin-inline-end: 0.5em;
-        }
-    }
 }
